# My-Finance-app

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yaml  build.rs  demo.css  index.html
css/: demo.css
pkg/: README.md  finance.d.ts  finance.js  finance_bg.wasm.d.ts  package.json
src/: add_new.rs  finance.rs  lib.rs  main.rs  to_do.rs
tests/: calculate_test.rs
ui/: add-new.slint  app-window.slint  calculate-window.slint  fuel-window.slint  my-components.slint  todo.slint
