[package]
name = "finance"
version = "1.0.0"
edition = "2021"
description = "A desktop app to make couting easier"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.7.2"

[dev-dependencies]
i-slint-backend-testing = "1.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.95" }
console_error_panic_hook = "0.1.7"

[package.metadata.bundle]
name = "My Finance"
identifier = "io.github.Qubi0-0.My-Finance"
description = "A desktop app to make couting easier"
icon = ["./icon.png"]

[lib]
crate-type = ["cdylib", "rlib"]